--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,14 +1,30 @@
-<!-- views/signup.ejs -->
+<!DOCTYPE html>
+<html lang="en">
 
-<%- include('layout', { isLoggedIn: false, body: '' }) %>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Signup Page</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 
-    <h2>Sign Up</h2>
-    <form action="/auth/signup" method="POST">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
-        <br>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-        <br>
-        <button type="submit">Sign Up</button>
-    </form>
+</head>
+
+<body>
+    <!-- views/signup.ejs -->
+
+    <%- include('layout', { isLoggedIn: false, body: '' }) %>
+
+        <h2>Sign Up</h2>
+        <form action="/auth/signup" method="POST">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required>
+            <br>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+            <br>
+            <button type="submit">Sign Up</button>
+        </form>
+</body>
+
+</html>
